--- a/src/app/controlEquipos/equipo-list/equipo-list.component.html
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.html
@@ -117,6 +117,10 @@
         <label for="numeroSerie">Número de Serie:</label>
         <input type="text" id="numeroSerie" name="numeroSerie" [(ngModel)]="selectedEquipo.numeroSerie" required>
       </div>
+       <div>
+        <label for="numeroInventario">Número de Inventario:</label>
+        <input type="text" id="numeroInventario" name="numeroInventario" [(ngModel)]="selectedEquipo.numeroInventario" required>
+      </div>
 
 
       <div>
@@ -185,16 +189,16 @@
         </div>
       </div>
 
-      <!-- Image Upload Field - Only visible if the user can upload images (e.g., Admin or Moderador) -->
+      <!-- Imagen -->
       <div class="form-group" *ngIf="isAdminOrModerador">
         <label for="imagenFile">Imagen:</label>
         <input type="file" id="imagenFile" (change)="onFileSelected($event)" accept="image/*" class="form-control">
       </div>
 
-      <!-- Image Preview (Optional) -->
+      <!-- Imagen Preview  -->
       <div *ngIf="imagenPreview" class="form-group image-preview-container">
         <label class="form-label">Previsualización:</label>
-        <img [src]="imagenPreview" alt="Imagen seleccionada" class="img-preview">
+        <img [src]="imagenPreview" alt="Imagen seleccionada" class="img-preview">   
       </div>
 
 
@@ -213,6 +217,7 @@
     <span class="close" (click)="cerrarModalVer()">&times;</span>
     <h3 class="text-center">Detalles de los Equipos</h3>
     <p><strong>Numero de Serie:</strong> {{ selectedEquipo?.numeroSerie }}</p>
+    <p><strong>Numero de Inventario:</strong> {{ selectedEquipo?.numeroInventario }}</p>
     <p><strong>Tipo:</strong> {{ selectedEquipo?.tipo}}</p>
     <p><strong>Marca:</strong> {{ selectedEquipo?.marca }}</p>
     <p><strong>Modelo:</strong> {{ selectedEquipo?.modelo }}</p>
@@ -264,7 +269,7 @@
 </div>
 
 
-<!-- MODAL -->
+<!-- MODAL para exportar a excel  -->
 <div class="modal" [class.show]="modalExportarVisible" [style.display]="modalExportarVisible ? 'block' : 'none'">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -307,6 +312,9 @@
                 (click)="exportarEquiposPorEstado('EN REPARACIÓN')">
           Exportar EN REPARACIÓN
         </button>
+        <button class="btn btn-info" (click)="exportarTodosLosEquipos()">
+  Exportar Todos
+</button>
         <button class="btn btn-secondary" (click)="cerrarModalExportar()">Cancelar</button>
       </div>
     </div>
