--- a/src/app/controlEquipos/dash-board/dash-board.component.html
+++ b/src/app/controlEquipos/dash-board/dash-board.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container">
+<div class="ps-3 pe-3" class="dashboard-container">
   <h1 class="text-center my-4 bi bi-house-fill"> Inicio</h1>
 
   <app-loading [loading]="loading"></app-loading>
@@ -22,7 +22,8 @@
       </div>
     </div>
   </div>
-  <!-- Sección Vista Rápida 
+</div>
+<!-- Sección Vista Rápida 
   <div class="overview-section mt-5">
     <div class="card shadow mb-4">
       <div class="card-header py-3">
