--- a/src/app/controlEquipos/licencia-list/licencia-list.component.html
+++ b/src/app/controlEquipos/licencia-list/licencia-list.component.html
@@ -1,218 +1,221 @@
-<h2 class="text-center mt-3 mb-3 bi bi-card-checklist"> Licencias</h2>
+<div class="ps-3 pe-3">
+  <h2 class="text-center mt-3 mb-3 bi bi-card-checklist"> Licencias</h2>
 
-<!-- Spinner de carga -->
-<app-loading [loading]="loading"></app-loading>
+  <!-- Spinner de carga -->
+  <app-loading [loading]="loading"></app-loading>
 
-<div class="search-container m-3">
-  <label for="searchNombre">Buscar por Nombre:</label>
-  <input type="text" [formControl]="searchControl" placeholder="Buscar por licencia..." />
-  <button type="button" class="btn btn-secondary" (click)="cargarLicencias()">Mostrar Todos</button>
-</div>
-
-
-<div class="d-flex justify-content-between align-items-start">
-
-  <!-- Botón para agregar personal (solo visible para administradores) -->
-  <div *ngIf="isAdmin" class="m-3 w-25">
-    <button class="btn btn-success m-3 w-100 bi bi-plus-circle" (click)="abrirModalAgregar()"> Agregar</button>
+  <div class="search-container m-3">
+    <label for="searchNombre">Buscar por Nombre:</label>
+    <input type="text" [formControl]="searchControl" placeholder="Buscar por licencia..." />
+    <button type="button" class="btn btn-secondary" (click)="cargarLicencias()">Mostrar Todos</button>
   </div>
 
-  <!-- Botones alineados a la izquierda -->
-  <div>
-    <!-- Botón para alternar orden -->
-    <button class="btn btn-secondary bi bi-arrow-down-up m-3" (click)="alternarOrden()"></button>
-    <!-- Botón para ir al Dashboard -->
-    <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
-    <!-- Botón para cerrar sesión -->
-    <button class="btn btn-danger m-3 bi bi-door-closed-fill" (click)="cerrarSesion()"> Salir</button>
+
+  <div class="d-flex justify-content-between align-items-start">
+
+    <!-- Botón para agregar personal (solo visible para administradores) -->
+    <div *ngIf="isAdmin" class="m-3 w-25">
+      <button class="btn btn-success m-3 w-100 bi bi-plus-circle" (click)="abrirModalAgregar()"> Agregar</button>
+    </div>
+
+    <!-- Botones alineados a la izquierda -->
+    <div>
+      <!-- Botón para alternar orden -->
+      <button class="btn btn-secondary bi bi-arrow-down-up m-3" (click)="alternarOrden()"></button>
+      <!-- Botón para ir al Dashboard -->
+      <button class="btn btn-primary m-3 bi bi-house-fill" (click)="irAlDashboard()"> Inicio</button>
+      <!-- Botón para cerrar sesión -->
+      <button class="btn btn-danger m-3 bi bi-door-closed-fill" (click)="cerrarSesion()"> Salir</button>
+
+    </div>
 
   </div>
+  <!-- Mensajes de éxito -->
+  <!-- Contenedor de notificaciones -->
+  <div class="notifications-container">
+    <!-- Notificación de éxito -->
+    <div *ngIf="mensajeExito" class="notification success">
+      <span class="notification-icon"></span>
+      {{ mensajeExito }}
+    </div>
 
-</div>
-<!-- Mensajes de éxito -->
-<!-- Contenedor de notificaciones -->
-<div class="notifications-container">
-  <!-- Notificación de éxito -->
-  <div *ngIf="mensajeExito" class="notification success">
-    <span class="notification-icon"></span>
-    {{ mensajeExito }}
+    <!-- Notificación de error -->
+    <div *ngIf="mensajeError" class="notification error">
+      <span class="notification-icon"></span>
+      {{ mensajeError }}
+    </div>
   </div>
 
-  <!-- Notificación de error -->
-  <div *ngIf="mensajeError" class="notification error">
-    <span class="notification-icon"></span>
-    {{ mensajeError }}
+  <div *ngIf="!loading">
+    <table class="table table-striped m-3">
+      <thead>
+        <tr>
+          <th>Tipo de software</th>
+          <th>Nombre</th>
+          <th>No. Serie</th>
+          <!-- <th>Usuarios soportados</th>-->
+          <th>Tipo de subscripción</th>
+          <th>Fecha Expiración</th>
+          <!--<th>Username</th>-->
+          <!--  <th>Password</th>-->
+          <th>Acciones</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr *ngFor="let licencia of licenciaList">
+          <td>{{ licencia.tipoSw}}</td>
+          <td>{{ licencia.nombreLicencia }}</td>
+          <td>{{ licencia.numeroSerie}}</td>
+          <!-- <td>{{licencia.numeroUsuarios}}</td>-->
+          <td>{{licencia.subcripcion}}</td>
+
+          <td>
+            <!-- Si es permanente, muestra "PERMANENTE" -->
+            <ng-container *ngIf="licencia.esPermanente; else mostrarFecha">
+              PERMANENTE
+            </ng-container>
+
+            <!-- Si no es permanente, muestra la fecha (si existe) -->
+            <ng-template #mostrarFecha>
+              {{ licencia.fechaVencimiento ? licencia.fechaVencimiento : 'PERMANENTE' }}
+            </ng-template>
+          </td>
+
+          <!--  <td>{{licencia.usuario}}</td>-->
+          <!--    <td>{{licencia.contrasena}}</td>-->
+          <td>
+            <button *ngIf="isAdminOrModerador" class="btn btn-info me-3" (click)="abrirModalEditar(licencia)"><i
+                class="bi bi-pencil"></i></button>
+            <button *ngIf="isAdmin" class="btn btn-danger me-3" (click)="eliminarLicencia(licencia.id!)"><i
+                class="bi bi-trash"></i></button>
+            <button class="btn btn-primary" (click)="abrirModalVer(licencia)"><i class="bi bi-eye"></i></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-</div>
 
-<div *ngIf="!loading">
-  <table class="table table-striped m-3">
-    <thead>
-      <tr>
-        <th>Tipo de software</th>
-        <th>Nombre</th>
-        <th>No. Serie</th>
-        <!-- <th>Usuarios soportados</th>-->
-        <th>Tipo de subscripción</th>
-        <th>Fecha Expiración</th>
-        <!--<th>Username</th>-->
-        <!--  <th>Password</th>-->
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody class="table-group-divider">
-      <tr *ngFor="let licencia of licenciaList">
-        <td>{{ licencia.tipoSw}}</td>
-        <td>{{ licencia.nombreLicencia }}</td>
-        <td>{{ licencia.numeroSerie}}</td>
-        <!-- <td>{{licencia.numeroUsuarios}}</td>-->
-        <td>{{licencia.subcripcion}}</td>
+  <!-- Modal para agregar o editar licencia -->
 
-        <td>
-          <!-- Si es permanente, muestra "PERMANENTE" -->
-          <ng-container *ngIf="licencia.esPermanente; else mostrarFecha">
-            PERMANENTE
-          </ng-container>
+  <div *ngIf="isModalVisible" class="modal">
+    <div class="modal-content">
+      <span class="close" (click)="cerrarModal()">×</span>
+      <h3>{{ isEditMode ? 'Editar Licencia' : 'Agregar Licencia' }}</h3>
 
-          <!-- Si no es permanente, muestra la fecha (si existe) -->
-          <ng-template #mostrarFecha>
-            {{ licencia.fechaVencimiento ? licencia.fechaVencimiento : 'PERMANENTE' }}
-          </ng-template>
-        </td>
-
-        <!--  <td>{{licencia.usuario}}</td>-->
-        <!--    <td>{{licencia.contrasena}}</td>-->
-        <td>
-          <button *ngIf="isAdminOrModerador" class="btn btn-info me-3" (click)="abrirModalEditar(licencia)"><i
-              class="bi bi-pencil"></i></button>
-          <button *ngIf="isAdmin" class="btn btn-danger me-3" (click)="eliminarLicencia(licencia.id!)"><i
-              class="bi bi-trash"></i></button>
-          <button class="btn btn-primary" (click)="abrirModalVer(licencia)"><i class="bi bi-eye"></i></button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-<!-- Modal para agregar o editar licencia -->
-
-<div *ngIf="isModalVisible" class="modal">
-  <div class="modal-content">
-    <span class="close" (click)="cerrarModal()">×</span>
-    <h3>{{ isEditMode ? 'Editar Licencia' : 'Agregar Licencia' }}</h3>
-
-    <form (ngSubmit)="guardarLicencia()" *ngIf="selectedLicencia">
-      <input type="hidden" [(ngModel)]="selectedLicencia.id" name="id">
-
-      <div>
-        <label for="tiposw">Tipo de software:</label>
-        <input type="text" id="tiposw" name="tiposw" [(ngModel)]="selectedLicencia.tipoSw" required>
-      </div>
-      <div>
-        <label for="nombrelic">Nombre de la licencia:</label>
-        <input type="text" id="nombrelic" name="nombrelic" [(ngModel)]="selectedLicencia.nombreLicencia" required>
-      </div>
-      <div>
-        <label for="noserie">Número de serie:</label>
-        <input type="text" id="noserie" name="noserie" [(ngModel)]="selectedLicencia.numeroSerie" required>
-      </div>
-      <div>
-        <label for="soportados">Usuarios soportados:</label>
-        <input type="number" id="soportados" name="soportados" [(ngModel)]="selectedLicencia.numeroUsuarios" required>
-      </div>
-
-
-      <div>
-        <label>Tipo de suscripción:</label><br>
+      <form (ngSubmit)="guardarLicencia()" *ngIf="selectedLicencia">
+        <input type="hidden" [(ngModel)]="selectedLicencia.id" name="id">
 
         <div>
-          <input type="radio" id="anual" name="suscripcion" value="ANUAL" [(ngModel)]="selectedLicencia.subcripcion"
-            (ngModelChange)="onSubscriptionChange()"> <!-- Llamamos a onSubscriptionChange -->
-          <label for="anual">ANUAL</label>
+          <label for="tiposw">Tipo de software:</label>
+          <input type="text" id="tiposw" name="tiposw" [(ngModel)]="selectedLicencia.tipoSw" required>
+        </div>
+        <div>
+          <label for="nombrelic">Nombre de la licencia:</label>
+          <input type="text" id="nombrelic" name="nombrelic" [(ngModel)]="selectedLicencia.nombreLicencia" required>
+        </div>
+        <div>
+          <label for="noserie">Número de serie:</label>
+          <input type="text" id="noserie" name="noserie" [(ngModel)]="selectedLicencia.numeroSerie" required>
+        </div>
+        <div>
+          <label for="soportados">Usuarios soportados:</label>
+          <input type="number" id="soportados" name="soportados" [(ngModel)]="selectedLicencia.numeroUsuarios" required>
+        </div>
+
+
+        <div>
+          <label>Tipo de suscripción:</label><br>
+
+          <div>
+            <input type="radio" id="anual" name="suscripcion" value="ANUAL" [(ngModel)]="selectedLicencia.subcripcion"
+              (ngModelChange)="onSubscriptionChange()"> <!-- Llamamos a onSubscriptionChange -->
+            <label for="anual">ANUAL</label>
+          </div>
+
+          <div>
+            <input type="radio" id="mensual" name="suscripcion" value="MENSUAL"
+              [(ngModel)]="selectedLicencia.subcripcion" (ngModelChange)="onSubscriptionChange()">
+            <!-- Llamamos a onSubscriptionChange -->
+            <label for="mensual">MENSUAL</label>
+          </div>
+
+          <div>
+            <input type="radio" id="permanente" name="suscripcion" value="PERMANENTE"
+              [(ngModel)]="selectedLicencia.subcripcion" (ngModelChange)="onSubscriptionChange()">
+            <!-- Llamamos a onSubscriptionChange -->
+            <label for="permanente">PERMANENTE</label>
+          </div>
+        </div>
+
+        <!-- Fecha de expiración o texto "PERMANENTE" -->
+        <div>
+          <label for="fechaExpiracion">Fecha Expiración:</label>
+
+          <!-- Mostramos el input de fecha SOLO si la suscripción NO es PERMANENTE -->
+          <input *ngIf="selectedLicencia.subcripcion !== 'PERMANENTE'" type="date" id="fechaExpiracion"
+            name="fechaExpiracion" [(ngModel)]="selectedLicencia.fechaVencimiento" required>
+          <!-- Es requerido solo si se muestra este input -->
+
+          <!-- Mostramos el texto "PERMANENTE" SOLO si la suscripción ES PERMANENTE -->
+          <span *ngIf="selectedLicencia.subcripcion === 'PERMANENTE'">PERMANENTE</span>
         </div>
 
         <div>
-          <input type="radio" id="mensual" name="suscripcion" value="MENSUAL" [(ngModel)]="selectedLicencia.subcripcion"
-            (ngModelChange)="onSubscriptionChange()"> <!-- Llamamos a onSubscriptionChange -->
-          <label for="mensual">MENSUAL</label>
+          <label for="usernamelic">Username:</label>
+          <input type="text" id="usernamelic" name="usernamelic" [(ngModel)]="selectedLicencia.usuario" required>
         </div>
-
         <div>
-          <input type="radio" id="permanente" name="suscripcion" value="PERMANENTE"
-            [(ngModel)]="selectedLicencia.subcripcion" (ngModelChange)="onSubscriptionChange()">
-          <!-- Llamamos a onSubscriptionChange -->
-          <label for="permanente">PERMANENTE</label>
+          <label for="passwordlic">Password:</label>
+          <input type="text" id="passwordlic" name="passwordlic" [(ngModel)]="selectedLicencia.contrasena" required>
         </div>
-      </div>
 
-      <!-- Fecha de expiración o texto "PERMANENTE" -->
-      <div>
-        <label for="fechaExpiracion">Fecha Expiración:</label>
-
-        <!-- Mostramos el input de fecha SOLO si la suscripción NO es PERMANENTE -->
-        <input *ngIf="selectedLicencia.subcripcion !== 'PERMANENTE'" type="date" id="fechaExpiracion"
-          name="fechaExpiracion" [(ngModel)]="selectedLicencia.fechaVencimiento" required>
-        <!-- Es requerido solo si se muestra este input -->
-
-        <!-- Mostramos el texto "PERMANENTE" SOLO si la suscripción ES PERMANENTE -->
-        <span *ngIf="selectedLicencia.subcripcion === 'PERMANENTE'">PERMANENTE</span>
-      </div>
-
-      <div>
-        <label for="usernamelic">Username:</label>
-        <input type="text" id="usernamelic" name="usernamelic" [(ngModel)]="selectedLicencia.usuario" required>
-      </div>
-      <div>
-        <label for="passwordlic">Password:</label>
-        <input type="text" id="passwordlic" name="passwordlic" [(ngModel)]="selectedLicencia.contrasena" required>
-      </div>
-
-      <div class="buttons">
-        <button class="btn btn-success me-3" type="submit">Guardar</button>
-        <button class="btn btn-danger" type="button" (click)="cancelarEdicion()">Cancelar</button>
-      </div>
-    </form>
+        <div class="buttons">
+          <button class="btn btn-success me-3" type="submit">Guardar</button>
+          <button class="btn btn-danger" type="button" (click)="cancelarEdicion()">Cancelar</button>
+        </div>
+      </form>
+    </div>
   </div>
-</div>
 
 
-<!-- Modal para visualizar detalles  -->
-<div *ngIf="isViewModalVisible" class="modal">
-  <div class="modal-content">
-    <span class="close" (click)="cerrarModalVer()">&times;</span>
-    <h3 class="text-center">Detalles de la Licencia</h3>
-    <p><strong>Tipo de software:</strong> {{ selectedLicencia?.tipoSw }}</p>
-    <p><strong>Nombre:</strong> {{ selectedLicencia?.nombreLicencia }}</p>
-    <p><strong>Numero de serie:</strong> {{ selectedLicencia?.numeroSerie }}</p>
-    <p><strong>Usuarios soportados:</strong> {{ selectedLicencia?.numeroUsuarios }}</p>
-    <p><strong>Tipo de subscripción:</strong> {{ selectedLicencia?.subcripcion }}</p>
-    <p>
-      <strong>Fecha Expiración:</strong>
-      <!-- Si es permanente, muestra "PERMANENTE" -->
-      <ng-container *ngIf="selectedLicencia?.esPermanente; else mostrarFechaDetalles">
-        PERMANENTE
-      </ng-container>
+  <!-- Modal para visualizar detalles  -->
+  <div *ngIf="isViewModalVisible" class="modal">
+    <div class="modal-content">
+      <span class="close" (click)="cerrarModalVer()">&times;</span>
+      <h3 class="text-center">Detalles de la Licencia</h3>
+      <p><strong>Tipo de software:</strong> {{ selectedLicencia?.tipoSw }}</p>
+      <p><strong>Nombre:</strong> {{ selectedLicencia?.nombreLicencia }}</p>
+      <p><strong>Numero de serie:</strong> {{ selectedLicencia?.numeroSerie }}</p>
+      <p><strong>Usuarios soportados:</strong> {{ selectedLicencia?.numeroUsuarios }}</p>
+      <p><strong>Tipo de subscripción:</strong> {{ selectedLicencia?.subcripcion }}</p>
+      <p>
+        <strong>Fecha Expiración:</strong>
+        <!-- Si es permanente, muestra "PERMANENTE" -->
+        <ng-container *ngIf="selectedLicencia?.esPermanente; else mostrarFechaDetalles">
+          PERMANENTE
+        </ng-container>
 
-      <!-- Si no es permanente, muestra la fecha (o N/A) -->
-      <ng-template #mostrarFechaDetalles>
-        {{ selectedLicencia?.fechaVencimiento ? selectedLicencia?.fechaVencimiento : 'N/A' }}
-      </ng-template>
-    </p>
-    <p *ngIf="isAdminOrModerador"><strong>Username:</strong> {{ selectedLicencia?.usuario }}</p>
-    <p *ngIf="isAdminOrModerador"><strong>Password:</strong> {{ selectedLicencia?.contrasena }}</p>
+        <!-- Si no es permanente, muestra la fecha (o N/A) -->
+        <ng-template #mostrarFechaDetalles>
+          {{ selectedLicencia?.fechaVencimiento ? selectedLicencia?.fechaVencimiento : 'N/A' }}
+        </ng-template>
+      </p>
+      <p *ngIf="isAdminOrModerador"><strong>Username:</strong> {{ selectedLicencia?.usuario }}</p>
+      <p *ngIf="isAdminOrModerador"><strong>Password:</strong> {{ selectedLicencia?.contrasena }}</p>
+    </div>
   </div>
-</div>
 
 
-<!-- Modal de confirmación para eliminar -->
-<div *ngIf="isConfirmDeleteVisible" class="modal-overlay">
-  <div class="modal-container">
-    <span class="close-btn" (click)="cancelarEliminacion()">&times;</span>
-    <h3 class="modal-title">Confirmar Eliminación</h3>
-    <p>¿Estás seguro de que deseas eliminar este registro? Esta acción no se puede deshacer.</p>
-    <div class="modal-buttons">
-      <button class="btn btn-danger" (click)="confirmarEliminacion()">Eliminar</button>
-      <button class="btn btn-secondary" (click)="cancelarEliminacion()">Cancelar</button>
+  <!-- Modal de confirmación para eliminar -->
+  <div *ngIf="isConfirmDeleteVisible" class="modal-overlay">
+    <div class="modal-container">
+      <span class="close-btn" (click)="cancelarEliminacion()">&times;</span>
+      <h3 class="modal-title">Confirmar Eliminación</h3>
+      <p>¿Estás seguro de que deseas eliminar este registro? Esta acción no se puede deshacer.</p>
+      <div class="modal-buttons">
+        <button class="btn btn-danger" (click)="confirmarEliminacion()">Eliminar</button>
+        <button class="btn btn-secondary" (click)="cancelarEliminacion()">Cancelar</button>
+      </div>
     </div>
   </div>
 </div>
