--- a/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.html
+++ b/src/app/controlEquipos/mantenimiento-list/mantenimiento-list.component.html
@@ -12,7 +12,7 @@
   <!-- Botón para descargar PDF de asignaciones -->
   <button class="btn btn-warning  m-3 bi bi-file-earmark-arrow-down-fill" (click)="descargarPdfMantenimiento()"> Reporte
     General</button>
-<div class="custom-multiselect">
+<div class="custom-multiselect" style="width: 100px;" >
   <label>Desde: <input type="date" [(ngModel)]="fechaInicio"></label>
   <label>Hasta: <input type="date" [(ngModel)]="fechaFin"></label>
   <button class="btn btn-outline-primary bi bi-file-earmark-excel-fill"  (click)="exportarMantenimientosAExcel()">Exportar Excel</button>
