--- a/src/app/controlEquipos/equipo-list/equipo-list.component.html
+++ b/src/app/controlEquipos/equipo-list/equipo-list.component.html
@@ -54,7 +54,7 @@
   </div>
 
   <!-- Filtros -->
-  <div class="filtros" style="width: 150px;">
+  <div class="filtros" style="width: 150px; display: flex; align-items: center; gap: 10px;">
     <label>Tipo:
       <select class="custom-select" [(ngModel)]="filtroTipo" (change)="filtrarEquipos()">
         <option value="">TODOS</option>
